--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
 		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
+		<meta name="robots" content="noindex" />
 		<meta
 			name="description"
 			content="Web site created using create-react-app"
@@ -48,6 +49,64 @@
 			name="twitter:image:alt"
 			content="Frontend Mentor | Notifications page"
 		/>
+	</head>
+	<body>
+		<noscript>You need to enable JavaScript to run this app.</noscript>
+		<div id="root"></div>
+	</body>
+</html>
+
+<!DOCTYPE html>
+<html lang="en" prefix="og: https://ogp.me/ns#">
+	<head>
+		<meta charset="utf-8" />
+		<link rel="icon" href="/favicon.ico" />
+		<meta name="viewport" content="width=device-width,initial-scale=1" />
+		<meta name="theme-color" content="#000000" />
+		<meta
+			name="description"
+			content="Web site created using create-react-app"
+		/>
+		<title>Frontendmentor | Notifications page</title>
+		<meta
+			name="description"
+			content="Single component to view your daily notifications in one page."
+		/>
+		<meta
+			property="og:site_name"
+			content="Frontend Mentor | Notifications page"
+		/>
+		<meta
+			property="og:description"
+			content="Single componente to view your daily notifications in one page."
+		/>
+		<meta property="og:title" content="Frontend Mentor | Notifications page" />
+		<meta property="og:type" content="website" />
+		<meta
+			property="og:url"
+			content="https://notifications-page-react-angeleraser.vercel.app/"
+		/>
+		<meta
+			property="og:image"
+			content="https://res.cloudinary.com/dixrgy8ki/image/upload/c_scale,h_630,w_1200/v1664213562/portfolio/projects/notifications-page-banner_kfdsbg.png"
+		/>
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:site" content="@angeleraser" />
+		<meta name="twitter:title" content="Frontend Mentor | Notifications page" />
+		<meta
+			name="twitter:description"
+			content="Single component to view your daily notifications in one page."
+		/>
+		<meta
+			name="twitter:image"
+			content="https://res.cloudinary.com/dixrgy8ki/image/upload/c_scale,h_630,w_1200/v1664213562/portfolio/projects/notifications-page-banner_kfdsbg.png"
+		/>
+		<meta
+			name="twitter:image:alt"
+			content="Frontend Mentor | Notifications page"
+		/>
+		<script defer="defer" src="/static/js/main.aa5940a1.js"></script>
+		<link href="/static/css/main.214ce97f.css" rel="stylesheet" />
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
